--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bytes = "1.2.0"
+nom = "7.1.1"
 static_assertions = "1.1.0"
 thiserror = "1.0.31"
 
@@ -14,4 +15,3 @@ thiserror = "1.0.31"
 serde = { version = "1.0.140", features = ["derive"] }
 heck = "0.4.0"
 strum = { version = "0.24.1", features = ["derive"] }
-# strum_macros = "0.24.2"
