--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ thiserror = "1.0.31"
 serde = { version = "1.0.140", features = ["derive"] }
 heck = "0.4.0"
 strum = { version = "0.24.1", features = ["derive"] }
+serde_json = "1.0.82"
